# server/docs/swagger.json
@@ -106,6 +106,34 @@
                 "responses": {}
             }
         },
+        "/api/sidebar/list/entries/{entry_id}/duplicate": {
+            "post": {
+                "description": "Duplicate an entry.",
+                "tags": [
+                    "Sidebar"
+                ],
+                "summary": "Duplicate Entry",
+                "parameters": [
+                    {
+                        "description": "Request Body",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handlers.DuplicateEntry.Req"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.DuplicateEntry.Resp"
+                        }
+                    }
+                }
+            }
+        },
         "/api/sidebar/list/entries/{entry_id}/sub_entries": {
             "get": {
                 "description": "Get sub-entries of an entry.",
@@ -159,15 +187,9 @@
                 }
             }
         },
-        "handlers.Entry": {
+        "handlers.DuplicateEntry.Req": {
             "type": "object",
             "properties": {
-                "has_sub_entries": {
-                    "type": "boolean"
-                },
-                "id": {
-                    "type": "string"
-                },
                 "parent": {
                     "type": "string"
                 },
@@ -176,9 +198,40 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "handlers.DuplicateEntry.Resp": {
+            "type": "object",
+            "properties": {
+                "entry": {
+                    "$ref": "#/definitions/handlers.Entry"
+                }
+            }
+        },
+        "handlers.Entry": {
+            "type": "object",
+            "properties": {
+                "has_sub_entries": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "id": {
+                    "type": "string",
+                    "example": "1000001"
+                },
+                "title": {
+                    "type": "string",
+                    "example": "Note Title"
                 },
                 "type": {
-                    "type": "string"
+                    "type": "string",
+                    "enum": [
+                        "note",
+                        "group",
+                        "link"
+                    ],
+                    "example": "note"
                 }
             }
         },
